--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,14 @@ label {
     margin: 0 auto;
   }
 }
+
+.col-valor {
+  width: 120px !important;
+  text-align: right;
+}
+
+.col-data {
+  width: 120px !important;
+  text-align: center;
+}
+
