--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,15 +6,15 @@
 
     <div class="ui-g-12 ui-fluid">
       <label>Descrição</label>
-      <input pInputText type="text">
+      <input pInputText type="text" />
     </div>
 
     <div class="ui-g-12">
       <label style="display: block">Vencimento</label>
-      <input pInputText type="text" style="width: 95px">
+      <input pInputText type="text" style="width: 95px" />
 
       <label> até </label>
-      <input pInputText type="text" style="width: 95px">
+      <input pInputText type="text" style="width: 95px" />
     </div>
 
     <div class="ui-g-12">
@@ -24,26 +24,37 @@
 
   <div class="ui-g">
     <div class="ui-g-12">
-      <p-table [value]="lancamentos" [tableStyle]="{'table-layout':'auto'}">
+      <p-table [value]="lancamentos" [tableStyle]="{ 'table-layout': 'auto' }">
         <ng-template pTemplate="header">
-            <tr>
-                <th>Pessoa</th>
-                <th>Descrição</th>
-                <th>Vencimento</th>
-                <th>Pagamento</th>
-                <th>Valor</th>
-            </tr>
+          <tr>
+            <th>Pessoa</th>
+            <th>Descrição</th>
+            <th>Vencimento</th>
+            <th>Pagamento</th>
+            <th>Valor</th>
+            <th></th>
+          </tr>
         </ng-template>
         <ng-template pTemplate="body" let-lancamento>
-            <tr>
-                <td>{{lancamento.pessoa}}</td>
-                <td>{{lancamento.descricao}}</td>
-                <td [ngClass]="'col-data'">{{lancamento.dataVencimento}}</td>
-                <td [ngClass]="'col-data'">{{lancamento.dataPagamento}}</td>
-                <td [ngClass]="'col-valor'">{{lancamento.valor}}</td>
-            </tr>
+          <tr>
+            <td>{{ lancamento.pessoa }}</td>
+            <td>{{ lancamento.descricao }}</td>
+            <td [ngClass]="'col-data'">{{ lancamento.dataVencimento }}</td>
+            <td [ngClass]="'col-data'">{{ lancamento.dataPagamento }}</td>
+            <td
+              [ngClass]="'col-valor'"
+              [style.color]="lancamento.tipo === 'DESPESA' ? 'red' : 'blue'"
+            >
+              {{ lancamento.valor }}
+            </td>
+            <td [ngClass]="'col-acoes'">
+              <button pButton icon="fa-pencil" [ngClass]="'col-acoes-btn'"></button>
+
+              <button pButton icon="fa-trash" [ngClass]="'col-acoes-btn'"></button>
+            </td>
+          </tr>
         </ng-template>
-    </p-table>
+      </p-table>
     </div>
   </div>
 </div>
