Criando Componente Pessoas-Pesquisa

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
 <app-navbar></app-navbar>
+<app-pessoas-pesquisa></app-pessoas-pesquisa>
+<br>
+<br>
+<br>
 <app-lancamentos-pesquisa></app-lancamentos-pesquisa>
