--- a/src/app/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -24,13 +24,8 @@
 
   <div class="ui-g">
     <div class="ui-g-12">
-      <p-table
-        [value]="lancamentos"
-        [tableStyle]="{ 'table-layout': 'auto' }"
-        [paginator]="true"
-        [rows]="5"
-        [responsive]="true"
-      >
+      <p-table [value]="lancamentos" [tableStyle]="{ 'table-layout': 'auto' }" [paginator]="true" [rows]="5"
+        [responsive]="true">
         <ng-template pTemplate="header">
           <tr>
             <th>Pessoa</th>
@@ -47,27 +42,12 @@
             <td>{{ lancamento.descricao }}</td>
             <td [ngClass]="'col-data'">{{ lancamento.dataVencimento }}</td>
             <td [ngClass]="'col-data'">{{ lancamento.dataPagamento }}</td>
-            <td
-              [ngClass]="'col-valor'"
-              [style.color]="lancamento.tipo === 'DESPESA' ? 'red' : 'blue'"
-            >
+            <td [ngClass]="'col-valor'" [style.color]="lancamento.tipo === 'DESPESA' ? 'red' : 'blue'">
               {{ lancamento.valor }}
             </td>
             <td [ngClass]="'col-acoes'">
-              <a
-                pButton
-                icon="fa fa-edit"
-                [ngClass]="'col-acoes-btn'"
-                pTooltip="Editar"
-                tooltipPosition="top"
-              ></a>
-              <button
-                pButton
-                icon="fa fa-trash"
-                [ngClass]="'col-acoes-btn'"
-                pTooltip="Excluir"
-                tooltipPosition="top"
-              ></button>
+              <a pButton icon="fa fa-edit" [ngClass]="'col-acoes-btn'" pTooltip="Editar" tooltipPosition="top"></a>
+              <button pButton icon="fa fa-trash" [ngClass]="'col-acoes-btn'" pTooltip="Excluir" tooltipPosition="top"></button>
             </td>
           </tr>
         </ng-template>
