--- a/src/app/pessoas-pesquisa/pessoas-pesquisa.component.html
+++ b/src/app/pessoas-pesquisa/pessoas-pesquisa.component.html
@@ -17,19 +17,38 @@
 
   <div class="ui-g">
     <div class="ui-g-12">
-      <p-table [value]="lessoas">
+      <p-table [value]="pessoas" [tableStyle]="{ 'table-layout': 'auto' }" [paginator]="true" [rows]="5" [responsive]="true">
         <ng-template pTemplate="header">
           <tr>
-            <th *ngFor="let col of cols" [ngClass]="isColAcoes(col)">
-              {{col.header}}
-            </th>
+            <th>Nome</th>
+            <th>Cidade</th>
+            <th>Estado</th>
+            <th>Status</th>
+            <th></th>
           </tr>
         </ng-template>
-
+        <ng-template pTemplate="body" let-pessoa>
+          <tr>
+            <td>{{ pessoa.nome }}</td>
+            <td>{{ pessoa.cidade }}</td>
+            <td>{{ pessoa.estado }}</td>
+            <td>
+              <a href="javascript:;" [pTooltip]="pessoa.ativo ? 'Desativar' : 'Ativar'" tolltipPosition="top">
+              {{ pessoa.ativo ? 'Ativo' : 'Inativo' }}
+              </a>
+            </td>
+            <td [ngClass]="'col-acoes'">
+              <a pButton icon="fa fa-edit" [ngClass]="'col-acoes-btn'" pTooltip="Editar" tooltipPosition="top"></a>
+              <button pButton icon="fa fa-trash" [ngClass]="'col-acoes-btn'" pTooltip="Excluir" tooltipPosition="top"></button>
+            </td>
+          </tr>
+        </ng-template>
       </p-table>
     </div>
+
+    <div class="ui-g-12">
+        <a pButton label="Nova Pessoa"></a>
+    </div>
   </div>
-
-
 
 </div>
