--- a/src/app/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -40,10 +40,10 @@
           <tr>
             <td>{{ lancamento.pessoa }}</td>
             <td>{{ lancamento.descricao }}</td>
-            <td [ngClass]="'col-data'">{{ lancamento.dataVencimento }}</td>
-            <td [ngClass]="'col-data'">{{ lancamento.dataPagamento }}</td>
+            <td [ngClass]="'col-data'">{{ lancamento.dataVencimento | date:'dd/MM/yyyy' }}</td>
+            <td [ngClass]="'col-data'">{{ lancamento.dataPagamento | date:'dd/MM/yyyy' }}</td>
             <td [ngClass]="'col-valor'" [style.color]="lancamento.tipo === 'DESPESA' ? 'red' : 'blue'">
-              {{ lancamento.valor }}
+              {{ lancamento.valor | number:'1.2-2' }}
             </td>
             <td [ngClass]="'col-acoes'">
               <a pButton icon="fa fa-edit" [ngClass]="'col-acoes-btn'" pTooltip="Editar" tooltipPosition="top"></a>
