--- a/src/app/lancamento-cadastro/lancamento-cadastro.component.html
+++ b/src/app/lancamento-cadastro/lancamento-cadastro.component.html
@@ -25,12 +25,10 @@
         <label>Descrição</label>
         <input pInputText type="text" name="descricao" ngModel #descricao="ngModel" required minlength="5">
 
-        <div class="ui-message ui-message-error" *ngIf="descricao.hasError('required') && descricao.dirty ">
-          Informe uma descrição
-        </div>
-        <div class="ui-message ui-message-error" *ngIf="descricao.hasError('minlength') && descricao.dirty ">
-          Mínimo de {{ descricao.errors.minlength.requiredLength }} caractéres.
-        </div>
+        <app-message [control]="descricao" error="required"
+          text="Informe uma descrição"></app-message>
+        <app-message [control]="descricao" error="minlength"
+          text="Mínimo de {{ descricao.errors?.minlength?.requiredLength }} caracteres"></app-message>
       </div>
 
       <div class="ui-g-12 ui-md-3 ui-fluid">
