--- a/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
+++ b/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
@@ -16,7 +16,7 @@
         <p-calendar dateFormat="dd/mm/yy" [inline]="false" [readonlyInput]="false" [showIcon]="false"
           name="vencimento" ngModel #vencimento="ngModel" required></p-calendar>
 
-        <app-message [control]="vencimento" error="required" text="Informe um vencimento"></app-message>
+        <!-- <app-message [control]="vencimento" error="required" text="Informe um vencimento"></app-message> -->
       </div>
 
       <div class="ui-g-6 ui-md-3 ui-fluid">
@@ -28,9 +28,11 @@
         <label>Descrição</label>
         <input pInputText type="text" name="descricao" ngModel #descricao="ngModel" required minlength="5" >
 
+        <!--
         <app-message [control]="descricao" error="required" text="Informe uma descrição"></app-message>
         <app-message [control]="descricao" error="minlength"
           text="Mínimo de {{ descricao.errors?.minlength?.requiredLength }} caracteres"></app-message>
+        -->
       </div>
 
       <div class="ui-g-12 ui-md-3 ui-fluid">
