Ajuste no LancamentoService para capturar propriedade 'content' do HttpResponse e iterar os dados na tabela

--- a/src/app/lancamentos/lancamentos-grid/lancamentos-grid.component.html
+++ b/src/app/lancamentos/lancamentos-grid/lancamentos-grid.component.html
@@ -1,4 +1,4 @@
-<p-table [value]="lancamentos" [tableStyle]="{ 'table-layout': 'auto' }" [paginator]="true" [rows]="5" [responsive]="true">
+<p-table [value]="lancamentos" [tableStyle]="{ 'table-layout': 'auto' }" [responsive]="true" [paginator]="true" [rows]="5">
   <ng-template pTemplate="header">
     <tr>
       <th>Pessoa</th>
