--- a/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -15,10 +15,10 @@
 
       <div class="ui-g-12">
         <label style="display: block">Vencimento</label>
-        <input pInputText type="text" style="width: 95px" />
+        <p-calendar name="vencimentoInicio" [(ngModel)]="dataVencimentoInicio" dateFormat="dd/mm/yy" [inputStyle]="{ width: '95px' }"></p-calendar>
 
         <label> até </label>
-        <input pInputText type="text" style="width: 95px" />
+        <p-calendar name="vencimentoFim" [(ngModel)]="dataVencimentoFim" dateFormat="dd/mm/yy" [inputStyle]="{ width: '95px' }"></p-calendar>
       </div>
 
       <div class="ui-g-12">
