--- a/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -10,15 +10,15 @@
 
       <div class="ui-g-12 ui-fluid">
         <label>Descrição</label>
-        <input pInputText type="text" name="descricao" [(ngModel)]="descricao" />
+        <input pInputText type="text" name="descricao" [(ngModel)]="filtro.descricao" />
       </div>
 
       <div class="ui-g-12">
         <label style="display: block">Vencimento</label>
-        <p-calendar name="vencimentoInicio" [(ngModel)]="dataVencimentoInicio" dateFormat="dd/mm/yy" [inputStyle]="{ width: '95px' }"></p-calendar>
+        <p-calendar name="vencimentoInicio" [(ngModel)]="filtro.dataVencimentoInicio" dateFormat="dd/mm/yy" [inputStyle]="{ width: '95px' }"></p-calendar>
 
         <label> até </label>
-        <p-calendar name="vencimentoFim" [(ngModel)]="dataVencimentoFim" dateFormat="dd/mm/yy" [inputStyle]="{ width: '95px' }"></p-calendar>
+        <p-calendar name="vencimentoFim" [(ngModel)]="filtro.dataVencimentoFim" dateFormat="dd/mm/yy" [inputStyle]="{ width: '95px' }"></p-calendar>
       </div>
 
       <div class="ui-g-12">
