Configurando a paginação Lazy do PrimeNG

--- a/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -15,10 +15,12 @@
 
       <div class="ui-g-12">
         <label style="display: block">Vencimento</label>
-        <p-calendar name="vencimentoInicio" [(ngModel)]="filtro.dataVencimentoInicio" dateFormat="dd/mm/yy" [inputStyle]="{ width: '95px' }"></p-calendar>
+        <p-calendar name="vencimentoInicio" [(ngModel)]="filtro.dataVencimentoInicio" dateFormat="dd/mm/yy"
+          [inputStyle]="{ width: '95px' }"></p-calendar>
 
         <label> até </label>
-        <p-calendar name="vencimentoFim" [(ngModel)]="filtro.dataVencimentoFim" dateFormat="dd/mm/yy" [inputStyle]="{ width: '95px' }"></p-calendar>
+        <p-calendar name="vencimentoFim" [(ngModel)]="filtro.dataVencimentoFim" dateFormat="dd/mm/yy"
+          [inputStyle]="{ width: '95px' }"></p-calendar>
       </div>
 
       <div class="ui-g-12">
@@ -31,7 +33,8 @@
   <div class="ui-g">
     <div class="ui-g-12">
       <p-table [value]="lancamentos" [tableStyle]="{ 'table-layout': 'auto' }" [responsive]="true" [paginator]="true"
-        [rows]="5">
+        [rows]="filtro.itensPorPagina" [lazy]="true" [totalRecords]="totalRegistros"
+        (onLazyLoad)="aoMudarPagina($event)">
         <ng-template pTemplate="header">
           <tr>
             <th>Pessoa</th>
