--- a/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
+++ b/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
@@ -20,8 +20,9 @@
   <div class="ui-g">
     <div class="ui-g-12">
 
-      <p-table [value]="pessoas" [tableStyle]="{ 'table-layout': 'auto' }" [paginator]="true" [rows]="5"
-        [responsive]="true">
+      <p-table [value]="pessoas" [tableStyle]="{ 'table-layout': 'auto' }" [paginator]="true"
+        [rows]="filtro.itensPorPagina" [responsive]="true" [lazy]="true" [totalRecords]="totalRegistros"
+        (onLazyLoad)="aoMudarPagina($event)">
         <ng-template pTemplate="header">
           <tr>
             <th>Nome</th>
