--- a/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -1,26 +1,37 @@
 <div class="container">
-
   <!-- Formulário -->
   <div class="ui-g">
     <form autocomplete="off" (ngSubmit)="pesquisar()">
-
       <div class="ui-g-12">
         <h1>Lançamentos</h1>
       </div>
 
       <div class="ui-g-12 ui-fluid">
         <label>Descrição</label>
-        <input pInputText type="text" name="descricao" [(ngModel)]="filtro.descricao" />
+        <input
+          pInputText
+          type="text"
+          name="descricao"
+          [(ngModel)]="filtro.descricao"
+        />
       </div>
 
       <div class="ui-g-12">
         <label style="display: block">Vencimento</label>
-        <p-calendar name="vencimentoInicio" [(ngModel)]="filtro.dataVencimentoInicio" dateFormat="dd/mm/yy"
-          [inputStyle]="{ width: '95px' }"></p-calendar>
+        <p-calendar
+          name="vencimentoInicio"
+          [(ngModel)]="filtro.dataVencimentoInicio"
+          dateFormat="dd/mm/yy"
+          [inputStyle]="{ width: '95px' }"
+        ></p-calendar>
 
         <label> até </label>
-        <p-calendar name="vencimentoFim" [(ngModel)]="filtro.dataVencimentoFim" dateFormat="dd/mm/yy"
-          [inputStyle]="{ width: '95px' }"></p-calendar>
+        <p-calendar
+          name="vencimentoFim"
+          [(ngModel)]="filtro.dataVencimentoFim"
+          dateFormat="dd/mm/yy"
+          [inputStyle]="{ width: '95px' }"
+        ></p-calendar>
       </div>
 
       <div class="ui-g-12">
@@ -32,9 +43,17 @@
   <!-- Tabela -->
   <div class="ui-g">
     <div class="ui-g-12">
-      <p-table [value]="lancamentos" [tableStyle]="{ 'table-layout': 'auto' }" [responsive]="true" [paginator]="true"
-        [rows]="filtro.itensPorPagina" [lazy]="true" [totalRecords]="totalRegistros"
-        (onLazyLoad)="aoMudarPagina($event)">
+      <p-table
+        [value]="lancamentos"
+        [tableStyle]="{ 'table-layout': 'auto' }"
+        [responsive]="true"
+        [paginator]="true"
+        [rows]="filtro.itensPorPagina"
+        [lazy]="true"
+        [totalRecords]="totalRegistros"
+        (onLazyLoad)="aoMudarPagina($event)"
+        #tabela
+      >
         <ng-template pTemplate="header">
           <tr>
             <th>Pessoa</th>
@@ -49,15 +68,34 @@
           <tr>
             <td>{{ lancamento.pessoa }}</td>
             <td>{{ lancamento.descricao }}</td>
-            <td [ngClass]="'col-data'">{{ lancamento.dataVencimento | date:'dd/MM/yyyy' }}</td>
-            <td [ngClass]="'col-data'">{{ lancamento.dataPagamento | date:'dd/MM/yyyy' }}</td>
-            <td [ngClass]="'col-valor'" [style.color]="lancamento.tipo === 'DESPESA' ? 'red' : 'blue'">
-              {{ lancamento.valor | number:'1.2-2' }}
+            <td [ngClass]="'col-data'">
+              {{ lancamento.dataVencimento | date: "dd/MM/yyyy" }}
+            </td>
+            <td [ngClass]="'col-data'">
+              {{ lancamento.dataPagamento | date: "dd/MM/yyyy" }}
+            </td>
+            <td
+              [ngClass]="'col-valor'"
+              [style.color]="lancamento.tipo === 'DESPESA' ? 'red' : 'blue'"
+            >
+              {{ lancamento.valor | number: "1.2-2" }}
             </td>
             <td [ngClass]="'col-acoes'">
-              <a pButton icon="fa fa-edit" [ngClass]="'col-acoes-btn'" pTooltip="Editar" tooltipPosition="top"></a>
-              <button pButton icon="fa fa-trash" [ngClass]="'col-acoes-btn'" pTooltip="Excluir"
-                tooltipPosition="top"></button>
+              <a
+                pButton
+                icon="fa fa-edit"
+                [ngClass]="'col-acoes-btn'"
+                pTooltip="Editar"
+                tooltipPosition="top"
+              ></a>
+              <button
+                pButton
+                icon="fa fa-trash"
+                [ngClass]="'col-acoes-btn'"
+                pTooltip="Excluir"
+                tooltipPosition="top"
+                (click)="excluir(lancamento)"
+              ></button>
             </td>
           </tr>
         </ng-template>
