--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+/* @import "../node_modules/ng2-toasty/style-bootstrap.css"; */
+
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
@@ -14,7 +16,7 @@ label {
   font-weight: bold;
 }
 
-@media (min-width: 1200px){
+@media (min-width: 1200px) {
   .container {
     width: 1170px;
     margin: 0 auto;
@@ -43,4 +45,3 @@ label {
 .btn-form-acoes {
   margin-right: 8px !important;
 }
-
