Adicionando diálogo de confirmação antes da exclusão

--- a/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -94,7 +94,7 @@
                 [ngClass]="'col-acoes-btn'"
                 pTooltip="Excluir"
                 tooltipPosition="top"
-                (click)="excluir(lancamento)"
+                (click)="confirmarExclusao(lancamento)"
               ></button>
             </td>
           </tr>
