Trocado menssagens para usuário de Angular-Toasty2 para PrimeNG Growl e Implementado menssagem de erro de usuário na exlusão de Pessoa

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 <app-pessoa-cadastro></app-pessoa-cadastro>
 -->
 
-<ng2-toasty></ng2-toasty>
+<p-growl></p-growl>
 <p-confirmDialog header="Confirmação" icon="fa fa-question-circle" #confirmacao>
   <p-footer>
     <button
