IMplementado a mudança de status de Pessoas

--- a/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
+++ b/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
@@ -48,6 +48,7 @@
                 href="javascript:;"
                 [pTooltip]="pessoa.ativo ? 'Desativar' : 'Ativar'"
                 tolltipPosition="top"
+                (click)="alternarStatus(pessoa, $event)"
               >
                 {{ pessoa.ativo ? "Ativo" : "Inativo" }}
               </a>
