Implementando navegação com RouterLink

--- a/src/app/pessoas/pessoa-cadastro/pessoa-cadastro.component.html
+++ b/src/app/pessoas/pessoa-cadastro/pessoa-cadastro.component.html
@@ -162,7 +162,9 @@
           label="Novo"
           class="ui-button-secondary btn-form-acoes"
         ></button>
-        <a href="javascript:;" class="btn-form-acoes">Voltar para a pesquisa</a>
+        <a href="javascript:;" class="btn-form-acoes" routerLink="/pessoas"
+          >Voltar para a pesquisa</a
+        >
       </div>
     </div>
   </form>
