--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -14,10 +14,14 @@
 
   <ul class="navbar-menu" [hidden]="!exibindoMenu">
     <li class="navbar-usuario">José da Silva</li>
-    <li class="navbar-menuitem">
+    <li class="navbar-menuitem" routerLinkActive="ativo">
       <a routerLink="/lancamentos">Lançamentos</a>
     </li>
-    <li class="navbar-menuitem"><a routerLink="/pessoas">Pessoas</a></li>
-    <li class="navbar-menuitem"><a routerLink="#">Logout</a></li>
+    <li class="navbar-menuitem" routerLinkActive="ativo">
+      <a routerLink="/pessoas">Pessoas</a>
+    </li>
+    <li class="navbar-menuitem" routerLinkActive="ativo">
+      <a routerLink="#">Logout</a>
+    </li>
   </ul>
 </nav>
