Recebendo parametros da rota pelo ActivatedRoute

--- a/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -87,6 +87,7 @@
                 [ngClass]="'col-acoes-btn'"
                 pTooltip="Editar"
                 tooltipPosition="top"
+                [routerLink]="['/lancamentos', lancamento.codigo]"
               ></a>
               <button
                 pButton
