Implementando navegação imperativa

--- a/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
+++ b/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
@@ -142,6 +142,7 @@
           type="button"
           label="Novo"
           class="ui-button-secondary btn-form-acoes"
+          (click)="novo(f)"
         ></button>
         <a href="javascript:;" class="btn-form-acoes" routerLink="/lancamentos"
           >Voltar para a pesquisa</a
