Configurando rotas em Pessoas

--- a/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
+++ b/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
@@ -60,6 +60,7 @@
                 [ngClass]="'col-acoes-btn'"
                 pTooltip="Editar"
                 tooltipPosition="top"
+                [routerLink]="['/pessoas', pessoa.codigo]"
               ></a>
               <button
                 pButton
