--- a/src/app/seguranca/login-form/login-form.component.html
+++ b/src/app/seguranca/login-form/login-form.component.html
@@ -1,4 +1,6 @@
 <div class="container">
+  {{ authService.jwtPayload | json }}
+
   <form autocomplete="off" #f="ngForm">
     <div class="ui-g ui-fluid">
       <div class="ui-g-12">
