--- a/src/app/seguranca/login-form/login-form.component.html
+++ b/src/app/seguranca/login-form/login-form.component.html
@@ -1,6 +1,4 @@
 <div class="container">
-  {{ authService.jwtPayload | json }}
-
   <form autocomplete="off" #f="ngForm">
     <div class="ui-g ui-fluid">
       <div class="ui-g-12">
@@ -43,7 +41,7 @@
           type="submit"
           label="Login"
           [disabled]="!f.valid"
-          (click)="login(usuario.value, senha.value)"
+          (click)="login(usuario.value, senha.value); senha.value = ''"
         ></button>
       </div>
     </div>
