--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -29,7 +29,7 @@
       <a routerLink="/pessoas">Pessoas</a>
     </li>
     <li class="navbar-menuitem" routerLinkActive="ativo">
-      <a routerLink="#">Logout</a>
+      <a (click)="logout()">Logout</a>
     </li>
   </ul>
 </nav>
