--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -5,13 +5,21 @@
 
       <div class="ui-g-6 ug-md-12">
         <p-panel header="Lançamentos por categoria">
-          <p-chart type="pie" [data]="pieChartData"></p-chart>
+          <p-chart
+            type="pie"
+            [data]="pieChartData"
+            [options]="options"
+          ></p-chart>
         </p-panel>
       </div>
 
       <div class="ui-g-6 ug-md-12">
         <p-panel header="Lançamentos por dia">
-          <p-chart type="line" [data]="lineChartData"></p-chart>
+          <p-chart
+            type="line"
+            [data]="lineChartData"
+            [options]="options"
+          ></p-chart>
         </p-panel>
       </div>
     </div>
