List persons's contacts in person's register page

--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
     <div class="ui-g-12">
       <h1>Dashboard</h1>
 
-      <div class="ui-g-6 ug-md-12">
+      <div class="ui-g-12 ui-md-6 ui-fluid">
         <p-panel header="Lançamentos por categoria">
           <p-chart
             type="pie"
@@ -13,7 +13,7 @@
         </p-panel>
       </div>
 
-      <div class="ui-g-6 ug-md-12">
+      <div class="ui-g-12 ui-md-6 ui-fluid">
         <p-panel header="Lançamentos por dia">
           <p-chart
             type="line"
