--- a/src/app/pessoas/pessoa-cadastro/pessoa-cadastro.component.html
+++ b/src/app/pessoas/pessoa-cadastro/pessoa-cadastro.component.html
@@ -149,6 +149,41 @@
       </div>
 
       <div class="ui-g-12">
+        <p-panel header="Contatos">
+          <div class="ui-g">
+            <div class="ui-g-12">
+              <p-table [value]="pessoa.contatos" [responsive]="true">
+                <ng-template pTemplate="header">
+                  <tr>
+                    <th>Nome</th>
+                    <th>E-mail</th>
+                    <th>Telefone</th>
+                    <th class="col-acoes-header"></th>
+                  </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-contato>
+                  <tr>
+                    <td>{{ contato.nome }}
+                    <td>{{ contato.email }}</td>
+                    <td>{{ contato.telefone }}</td>
+                    <td class="col-acoes">
+                      <button pButton icon="fa fa-pencil" type="button" pTooltip="Editar" tooltipPosition="top" [ngClass]="'col-acoes-btn'"></button>
+                      <button pButton icon="fa fa-trash" type="button" pTooltip="Excluir" tooltipPosition="top" [ngClass]="'col-acoes-btn'"></button>
+                    </td>
+                  </tr>
+                </ng-template>
+                <ng-template pTemplate="emptymessage">
+                  <tr>
+                    <td colspan="4">Nenhum contato cdastrado</td>
+                  </tr>
+                </ng-template>
+              </p-table>
+            </div>
+          </div>
+        </p-panel>
+      </div>
+
+      <div class="ui-g-12">
         <button
           pButton
           type="submit"
