--- a/src/app/pessoas/pessoa-cadastro/pessoa-cadastro.component.html
+++ b/src/app/pessoas/pessoa-cadastro/pessoa-cadastro.component.html
@@ -151,6 +151,9 @@
       <div class="ui-g-12">
         <p-panel header="Contatos">
           <div class="ui-g">
+            <div class="uig-g-12">
+              <p-button label="Novo" icon="fa fa-plus" type="button" class="ui-button-secondary" (click)="prepararNovoContato()"></p-button>
+            </div>
             <div class="ui-g-12">
               <p-table [value]="pessoa.contatos" [responsive]="true">
                 <ng-template pTemplate="header">
@@ -205,3 +208,5 @@
     </div>
   </form>
 </div>
+
+<p-dialog header="Novo Contato" [(visible)]="exibindoFormularioContato" modal="modal"></p-dialog>
