--- a/src/app/pessoas/pessoa-cadastro/pessoa-cadastro.component.html
+++ b/src/app/pessoas/pessoa-cadastro/pessoa-cadastro.component.html
@@ -164,13 +164,13 @@
                     <th class="col-acoes-header"></th>
                   </tr>
                 </ng-template>
-                <ng-template pTemplate="body" let-contato>
+                <ng-template pTemplate="body" let-contato let-rowIndex="rowIndex">
                   <tr>
                     <td>{{ contato.nome }}
                     <td>{{ contato.email }}</td>
                     <td>{{ contato.telefone }}</td>
                     <td class="col-acoes">
-                      <button pButton icon="fa fa-pencil" type="button" pTooltip="Editar" tooltipPosition="top" [ngClass]="'col-acoes-btn'"></button>
+                      <button pButton icon="fa fa-pencil" type="button" pTooltip="Editar" tooltipPosition="top" [ngClass]="'col-acoes-btn'" (click)="prepararEdicaoContato(contato, rowIndex)"></button>
                       <button pButton icon="fa fa-trash" type="button" pTooltip="Excluir" tooltipPosition="top" [ngClass]="'col-acoes-btn'"></button>
                     </td>
                   </tr>
