--- a/src/app/pessoas/pessoa-cadastro/pessoa-cadastro.component.html
+++ b/src/app/pessoas/pessoa-cadastro/pessoa-cadastro.component.html
@@ -171,7 +171,7 @@
                     <td>{{ contato.telefone }}</td>
                     <td class="col-acoes">
                       <button pButton icon="fa fa-pencil" type="button" pTooltip="Editar" tooltipPosition="top" [ngClass]="'col-acoes-btn'" (click)="prepararEdicaoContato(contato, rowIndex)"></button>
-                      <button pButton icon="fa fa-trash" type="button" pTooltip="Excluir" tooltipPosition="top" [ngClass]="'col-acoes-btn'"></button>
+                      <button pButton icon="fa fa-trash" type="button" pTooltip="Excluir" tooltipPosition="top" [ngClass]="'col-acoes-btn'" (click)="removerContato(rowIndex)"></button>
                     </td>
                   </tr>
                 </ng-template>
