--- a/src/app/pessoas/pessoa-cadastro/pessoa-cadastro.component.html
+++ b/src/app/pessoas/pessoa-cadastro/pessoa-cadastro.component.html
@@ -150,89 +150,18 @@
 
       <div class="ui-g-12">
         <p-panel header="Contatos">
-          <div class="ui-g">
-            <div class="uig-g-12">
-              <p-button label="Novo" icon="fa fa-plus" type="button" class="ui-button-secondary" (click)="prepararNovoContato()"></p-button>
-            </div>
-            <div class="ui-g-12">
-              <p-table [value]="pessoa.contatos" [responsive]="true">
-                <ng-template pTemplate="header">
-                  <tr>
-                    <th>Nome</th>
-                    <th>E-mail</th>
-                    <th>Telefone</th>
-                    <th class="col-acoes-header"></th>
-                  </tr>
-                </ng-template>
-                <ng-template pTemplate="body" let-contato let-rowIndex="rowIndex">
-                  <tr>
-                    <td>{{ contato.nome }}
-                    <td>{{ contato.email }}</td>
-                    <td>{{ contato.telefone }}</td>
-                    <td class="col-acoes">
-                      <button pButton icon="fa fa-pencil" type="button" pTooltip="Editar" tooltipPosition="top" [ngClass]="'col-acoes-btn'" (click)="prepararEdicaoContato(contato, rowIndex)"></button>
-                      <button pButton icon="fa fa-trash" type="button" pTooltip="Excluir" tooltipPosition="top" [ngClass]="'col-acoes-btn'" (click)="removerContato(rowIndex)"></button>
-                    </td>
-                  </tr>
-                </ng-template>
-                <ng-template pTemplate="emptymessage">
-                  <tr>
-                    <td colspan="4">Nenhum contato cdastrado</td>
-                  </tr>
-                </ng-template>
-              </p-table>
-            </div>
-          </div>
+          <app-pessoa-cadastro-contato [contatos]="pessoa.contatos"></app-pessoa-cadastro-contato>
         </p-panel>
       </div>
 
       <div class="ui-g-12">
-        <button
-          pButton
-          type="submit"
-          label="Salvar"
-          class="btn-form-acoes"
-          [disabled]="f.invalid"
+        <button pButton type="submit" label="Salvar" class="btn-form-acoes" [disabled]="f.invalid"
         ></button>
-        <button
-          pButton
-          type="button"
-          label="Nova"
-          class="ui-button-secondary btn-form-acoes"
-          (click)="novo(f)"
+        <button pButton type="button" label="Nova" class="ui-button-secondary btn-form-acoes" (click)="novo(f)"
         ></button>
-        <a href="javascript:;" class="btn-form-acoes" routerLink="/pessoas"
-          >Voltar para a pesquisa</a
-        >
+        <a href="javascript:;" class="btn-form-acoes" routerLink="/pessoas">Voltar para a pesquisa</a>
       </div>
     </div>
   </form>
 </div>
 
-<p-dialog header="Novo Contato" [(visible)]="exibindoFormularioContato" modal="modal" *ngIf="contato">
-  <form #frmContato="ngForm" (ngSubmit)="confirmarContato(frmContato)">
-    <div class="ui-g-12 ui-fluid">
-      <label>Nome</label>
-      <input pInputText type="text" name="nome" required [(ngModel)]="contato.nome" #contatoNome="ngModel"/>
-
-      <app-message [control]="contatoNome" error="required" text="Informe o nome"></app-message>
-    </div>
-
-    <div class="ui-g-12 ui-fluid">
-      <label>E-Mail</label>
-      <input pInputText type="email" name="email" required email [(ngModel)]="contato.email" #contatoEmail="ngModel"/>
-
-      <app-message [control]="contatoEmail" error="required" text="Informe o e-mail"></app-message>
-      <app-message [control]="contatoEmail" error="email" text="Informe um e-mail válido"></app-message>
-    </div>
-
-    <div class="ui-g-12 ui-fluid">
-      <label>Telefone</label>
-      <p-inputMask name="telefone" [(ngModel)]="contato.telefone" mask="(99) 99999-999?9"></p-inputMask>
-    </div>
-
-    <div class="ui-g-12">
-      <button pButton type="submit" label="Confirmar" [disabled]="frmContato.invalid"></button>
-    </div>
-  </form>
-</p-dialog>
