Disable save button while uploading file

--- a/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
+++ b/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
@@ -143,7 +143,7 @@
           type="submit"
           label="Salvar"
           class="btn-form-acoes"
-          [disabled]="formulario.invalid"
+          [disabled]="formulario.invalid || uploadEmAndamento"
         ></button>
         <button
           pButton
