--- a/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
+++ b/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
@@ -125,14 +125,17 @@
                       [url]="urlUploadAnexo"
                       (onBeforeSend)="antesUploadAnexo()"
                       (onUpload)="aoTerminarUploadAnexo($event)"
-                      (onError)="erroUpload($event)"
+                      (onError)="erroUpload()"
                       [hidden]="uploadEmAndamento"></p-fileUpload>
         <p-progressSpinner [hidden]="!uploadEmAndamento"
                            [style]="{ width: '25px', height: '25px' }"></p-progressSpinner>
       </div>
 
-      <div class="ui-g-12 ui-fluid" dir="rtl"
+      <div class="ui-g-12" dir="rtl"
            *ngIf="formulario.get('anexo').value">
+        <button pButton type="button" class="ui-button-danger" icon="fa fa-close" pTooltip="Remover anexo"
+                tooltipPosition="top" (click)="removerAnexo()"></button>
+
         <a target="_blank" pTooltip="Baixar anexo" tooltipPosition="top"
            [href]="formulario.get('urlAnexo').value">{{ nomeAnexo }}</a>
       </div>
