--- a/src/app/pessoas/pessoa-cadastro/pessoa-cadastro.component.html
+++ b/src/app/pessoas/pessoa-cadastro/pessoa-cadastro.component.html
@@ -113,6 +113,11 @@
       </div>
 
       <div class="ui-g-12 ui-md-6 ui-fluid">
+        <label>Estado</label>
+        <p-dropdown placeholder="Selecione..." [autoWidth]="false" [filter]="true" [options]="estados"></p-dropdown>
+      </div>
+
+      <div class="ui-g-12 ui-md-6 ui-fluid">
         <label>Cidade</label>
         <input
           pInputText
@@ -127,24 +132,6 @@
           [control]="cidade"
           error="required"
           text="Informe a cidade"
-        ></app-message>
-      </div>
-
-      <div class="ui-g-12 ui-md-6 ui-fluid">
-        <label>Estado</label>
-        <input
-          pInputText
-          type="text"
-          name="estado"
-          [(ngModel)]="pessoa.endereco.estado"
-          #estado="ngModel"
-          required
-        />
-
-        <app-message
-          [control]="estado"
-          error="required"
-          text="Informe o estado"
         ></app-message>
       </div>
 
